--- a/CSS/form.css
+++ b/CSS/form.css
@@ -13,6 +13,7 @@ h2 {
     color: #575757;
     font-size: 24px; 
     text-align: center;
+    margin-bottom: 35px;
 }
 
 form {
@@ -30,7 +31,7 @@ form {
 input {
     padding: 10px;
     border-radius: 5px;
-    border: 2px solid black;
+    border: 1px solid black;
     margin-bottom: 5px;
     background-color:#dfdfdf;
 }
