Complete navbar CSS

--- a/CSS/03_nav.css
+++ b/CSS/03_nav.css
@@ -1,27 +1,145 @@
-ul {
+body {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  margin: 0;
+  padding: 20px;
+  background-color: #1a1a1a;
+  color: white;
+}
+
+.nav-container {
+  margin-bottom: 40px;
+}
+
+h2 {
+  margin-bottom: 10px;
+}
+
+.nav1 {
+  background-color: #f8f9fa;
+  padding: 10px;
+}
+
+.nav1 ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  width: 150px;
-  background-color: #f1f1f1;
-  border: 1px solid black;
+  display: flex;
+  justify-content: space-around;
 }
 
-li {
-  text-align: center;
-  border-bottom: 1px solid black;
+.nav1 li {
+  display: inline;
 }
 
-li a {
-  display: block;
-  color: #000;
-  padding: 8px 16px;
+.nav1 a {
   text-decoration: none;
-  font-size: 24px;
+  color: rgb(54, 43, 43);
+  padding: 5px 15px;
+  position: relative;
 }
 
-li a:hover {
-  color: beige;
-  background-color: rgb(9, 37, 66);
+.nav1 .login-btn {
+  background-color: #254bf6;
+  color: #fff;
+  border: none;
+  padding: 5px 15px;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
+.nav1 a::after {
+  content: "";
+  position: absolute;
+  height: 2px;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  background-color: #0a65c7;
+  transform: scaleX(0);
+  transition: transform 0.3s ease-in-out;
+}
+.nav1 a:hover::after {
+  transform: scaleX(1);
+}
+
+.nav2 {
+  background-color: #03643c;
+  width: 200px;
+  padding: 20px;
+}
+
+.nav2 ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.nav2 li {
+  margin-bottom: 12px;
+}
+
+.nav2 a {
+  text-decoration: none;
+  color: white;
+  display: block;
+  padding: 10px;
+  width: 100%;
+}
+
+.nav2 a:hover {
+  background-color: #137e0a;
+}
+
+.nav2 .login-btn {
+  background-color: #05501d;
+  color: white;
+  border: none;
+  width: 100%;
+  padding: 10px;
+  cursor: pointer;
+  margin-left: 10px;
+}
+
+.nav2 .login-btn:hover {
+  background-color: #057017;
+  border: 1px solid white;
+  border-radius: 5px;
+}
+
+.nav3 {
+  background-color: #45a2bb;
+  padding: 10px;
+}
+.nav3 ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.nav3 a {
+  text-decoration: none;
+  color: #fff;
+  padding: 10px;
+  display: block;
+}
+.nav3 .dropdown-content {
+  display: none;
+}
+
+.nav3 .dropdown:hover .dropdown-content {
+  display: block;
+  position: absolute;
+  background-color: #3e3e3e;
+  min-width: 150px;
+}
+
+.nav3 .login-btn {
+  background-color: #254bf6;
+  color: #fff;
+  border: none;
+  padding: 5px 15px;
+  border-radius: 5px;
+  cursor: pointer;
+}
